# pyvcloud

./: .Jenkinsfile  .buildinfo  .gitignore  .gitlab-ci.yml  .travis.yml  .upload-to-pip.sh  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  Dockerfile  Dockerfile.dev  ISSUE_REQUEST.md  LICENSE.txt  MANIFEST.in  NOTICE.txt  Notice.txt  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  _vca  changes.txt  cleanup.sh  cloudesire_pyvcloud  dev-requirements.txt  format-code.sh  generate-docs.py  genindex.html  index.html  modules.html  objects.inv  open_source_license_pyvCloud19.2.0GA.txt  open_source_license_pyvCloud_20.0.0_GA.TXT  open_source_license_pyvCloud_20.0.0_GA.txt  publish.sh  py-modindex.html  pyvcloud.html  pyvcloud.system_test_framework.base_test.html  pyvcloud.system_test_framework.environment.html  pyvcloud.system_test_framework.html  (+28 more)
.circleci/: config.yml
_sources/: index.rst.txt  modules.rst.txt  pyvcloud.system_test_framework.base_test.rst.txt  pyvcloud.system_test_framework.rst.txt  pyvcloud.system_test_framework.utils.rst.txt  pyvcloud.vcd.acl.rst.txt  pyvcloud.vcd.rst.txt
browsercookie/: __init__.py
docs/: ExceptionHandling.md  Makefile  README.md  _config.yml  catalog.md  changes.rst  cluster.md  commands.md  conf.py  configuration.md  doc-requirements.txt  extending.md  index.rst  install.md  login.md  make.bat  modules.rst  pyvcloud.rst  pyvcloud.schema.vcd.v1_5.schemas.admin.rst  pyvcloud.schema.vcd.v1_5.schemas.rst  pyvcloud.schema.vcd.v1_5.schemas.vcloud.rst  requirements.txt  serviceType.rst  vapp.rst  vcd.md  vcd_catalog.md  vcd_catalog_acl.md  vcd_catalog_acl_add.md  vcd_catalog_acl_list.md  vcd_catalog_acl_remove.md  vcd_catalog_acl_share.md  vcd_catalog_acl_unshare.md  vcd_catalog_change-owner.md  vcd_catalog_change_owner.md  vcd_catalog_control-access.md  vcd_catalog_control_access.md  vcd_catalog_create.md  vcd_catalog_delete.md  vcd_catalog_download.md  vcd_catalog_info.md  (+126 more)
examples/: README.md  add_vapp_metadata.py  cancel_running_tasks.py  create_task.py  create_vm.py  del_vapp_metadata.py  examples.py  get_extension.py  get_task.py  get_vapp_metadata.py  list-vapps.py  list-vdc-resources.py  list_clusters.py  list_extensions.py  list_tasks.py  make-vm-snapshot.py  monitor_tasks.py  onecloud.py  query_vapp_by_metadata.py  register_extension.py  remove_all_snapshot.py  reuse_token.py  revert_back_the_vm_to_current_snapshot.py  run_examples.sh  sysadmin.py  system-info.py  tenant-onboard.py  tenant-remove.py  tenant.yaml  tenantlib.py  test.py  unregister_extension.py  update_task.py  vcd_connection.sample  vchs_login_tests.py  vm-snapshot-tasks.py
files/: add_public_ssh_key.sh  add_public_ssh_key_centos.sh  blueprints.sh  create_vms.sh  createiso.sh  customization.sh  id_rsa_vca.pub  natrules.yaml  vpn_tunnels.yaml
neo_tests/: base_config.yaml  base_test.py  environment.py  neo_vcd_disk.py
pyvcloud/: __init__.py  score.py  (+12 more)
(+294 files in other folders)
