[metadata]
name = vcd-cli
version = 19.0.2
summary = VMware vCloud Director CLI
description-file =
	README.md
author = Paco Gomez
author_email = pgomez@vmware.com
url = https://github.com/vmware/vcd-cli
classifier =
	Environment :: Console
	Intended Audience :: System Administrators
	Intended Audience :: Developers
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
requires-python = >=2.7

[files]
packages =
	vca_cli
	vcd_cli

[global]

[bdist_wheel]
universal = 1

[entry_points]
console_scripts =
	vca = vca_cli.vca_cli:cli
	vcd = vcd_cli.vcd:cli

[easy_install]
