[metadata]
name = vcd-cli
summary = VMware vCloud Director CLI
description-file =
	README.md
author = Paco Gomez
author_email = pgomez@vmware.com
url = https://github.com/vmware/vcd-cli
license = Apache 2
classifier =
	Environment :: Console
	Intended Audience :: System Administrators
	Intended Audience :: Developers
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3
requires-python = >=3

[files]
packages =
	vca_cli
	vcd_cli

[global]

[bdist_wheel]
universal = 1

[entry_points]
console_scripts =
	vca = vca_cli.vca_cli:cli
	vcd = vcd_cli.vcd:vcd

[easy_install]
