# VMware vCloud Python SDK
# Copyright (c) 2014-2017 VMware, Inc. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = pyvcloud
summary = VMware vCloud Director Python SDK
description-file =
    README.md
author = Paco Gomez
author_email = pgomez@vmware.com
url = https://github.com/vmware/pyvcloud
license = Apache 2

classifier =
    Environment :: Console
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3

requires-python = >=3

[files]
packages =
  pyvcloud
data_files =
  ./ = open_source_license_pyvCloud19.2.0GA.txt
